--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -2,7 +2,7 @@ name: Build LaTeX document, check and commit to gh-pages branch
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
